Added chapter 01 demo class